k8s-specifications/redis-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  labels:
    name: redis-deploy
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
      app: voting-app
      type: be
  template:
    metadata:
      name: redis-pod
      labels:
        name: redis-pod
        app: voting-app
        type: be
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
