k8s-specifications/voting-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-result-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/tags: CiCd:CdkPpbApp=true,Platform:Environment=dev,Platform:BusinessVertical=infra,Platform:CostCode=SN41465,Platform:TLA=refkube
    external-dns.alpha.kubernetes.io/hostname: example.infra-dev.aws.private
    alb.ingress.kubernetes.io/healthcheck-path: '/vote'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  rules:
  - http:
      paths:
        - path: /vote
          pathType: Prefix
          backend:
            service:
              name: voting-app
              port:
                number: 80
        - path: /static #used my python app to serve static files
          pathType: Prefix # can use static/* with pathType: ImplementationSpecific
          backend:
            service:
              name: voting-app
              port:
                number:  80
        - path: /result
          pathType: Prefix
          backend:
            service:
              name: voting-result
              port:
                number: 80
        - path: /staticjs #used by nodejs express to serve static files
          pathType: Prefix
          backend:
            service:
              name: voting-result
              port:
                number: 80
